--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "@babel/preset-react": "^7.12.1",
     "babel-loader": "^8.1.0",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react-dom": "^17.0.1"
+  },
+  "devDependencies": {
     "webpack": "^5.3.2",
     "webpack-cli": "^4.1.0",
     "webpack-dev-server": "^3.11.0"
